css/stylesheet.css
/* ... */
    #menu {
      background-color: #FFE350;
      color:#5E763B;
      padding: 10px;
      margin:0;
      text-align: center;}
    
/* HEADER */

#title {
  background-color:#FFF48F;
  color:#5E763B;
  font-size:1.75em;
  padding: 57px;
  margin:0;
  text-decoration: none;
  font-family: inknutregular, serif;
  line-height:1.25em;
  letter-spacing: 2px;}

/* ABOUT PAGE */
#about-head{
  max-width:343px;
  background-color: #C8DAA6;
  border-radius:25px;
  display:block;
  margin:auto;
  padding: 10px;
  }

.aboutsquareone{
  max-width:102px;
  filter: drop-shadow(-8px 8px 0px rgba(255, 244, 153, 1));
}
.aboutsquaretwo{
  max-width:102px;
  filter: drop-shadow(-8px 8px 0px rgba(200, 218, 166, 1));
}

.threepics{
  display:flex;
  justify-content: space-around;
  padding: 0px 0px 0px 8px;
}

.imgseperator{
  background-color:#C8DAA6;
  border-radius:25px;
  width:90%;
  height: 4px;
  margin: 28px auto 20px;
}

.friendsone{
  max-height:185.78px;
  filter: drop-shadow(-11px 11px 0px rgba(200, 218, 166, 1))
}
.friendstwo{
  max-height:185.78px;
  filter: drop-shadow(-11px 11px 0px rgba(255, 244, 153, 1))
}
.friends{
  display:flex;
  justify-content: space-around;
  padding: 0px 0px 0px 11px;
}
.a-carousel{
  max-width:329px;
}
/*CAROUSEL????*/

.carousel-container {
  width: 90%;
  margin: 14px auto;
  overflow: hidden;
  position: relative;
}

.carousel {
  display: flex;
  align-items: center;
  transition: transform 0.5s ease-in-out;
}

.carousel img {
  width: 90%;
  height: auto;
  background-color:#FFF48F;
  padding:15px;
}

.carousel-item {
  width: 100%;
  flex: 0 0 auto;
  margin: 0 auto;
}

.carousel-button {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: 30px;
  height: 30px;
  background-color: rgba(200, 218, 166, 0.9);
  color: #fff;
  border: none;
  border-radius: 50%;
  transform: translateY(-50%);
}

.prev {
  left: 10px;
}

.next {
  right: 10px;
}

/*RESUME*/
.resume-list{
  margin-right:18px;
  }

/*CAT TRACK*/
.user-persona{
  max-width:343px;
  background-color:#C8DAA6;
  border-radius:25px;
  display:block;
  margin:auto;
  padding: 10px;}

.horizontal-content{
  width: 257px;
  margin: 15px auto;
}

.cat-horizontal{
  overflow: auto;
  white-space: nowrap;
  background-color:#C8DAA6;
  padding:15px;
  border-radius: 25px;
}
.horizontal-cap{
  display: block;
  margin:-35px auto 45px;
}

/*DESIGN*/
.design-intro{
  display: flex;
  justify-content: space-evenly;
}
.designnav ul{
  list-style: none;
}
.designnav a{
  margin:7px 10px 7px -35px;
  display: block;
  background-color: #5E763B;
  height: 50px;
  width: 95px;
  color: #FFF48F;
  border-radius: 25px;
  line-height: 25px; /* Adjust line-height to center text vertically */
  text-align: center; /* Center text horizontally */
  text-decoration: none;
}
.intro-p{
  margin: auto 5px;
  background-color: #FFF48F;
  padding: 0 10px;
  border-radius: 25px;
}

.graffiti-img{
  background-color: #FFF48F;
  border-radius:35px;
  display:block;
  margin:7px auto;
  max-width:343px;
  padding:55px 10px 25px;
}
.constructivism-img{
  background-color: #C8DAA6;
  border-radius: 35px;
  display:block;
  margin:7px auto 24px;
  max-width:343px;
  padding:55px 10px 25px;
}
.redesign-models{
  background-color:#C8DAA6;
  display:block;
  margin:18px auto 10px;
  max-width:343px;
  padding: 12px;
}
.persepctive-anim{
  background-color:#C8DAA6;
  display:block;
  margin: 12px auto;
  max-width:343px;
  padding:15px 15px 55px;
}
.perspective-cap{
  margin-top:-45px;
}
.symmetry{
  background-color:#FFF48F;
  display:block;
  max-width:140px;
  padding:15px 15px 55px;
  margin: 12px auto;
}
.expressiveline{
  background-color:#FFF48F;
  max-width:140px;
  display:block;
  padding:15px 15px 55px;
  margin: 12px auto;
}
  .line-sidebyside{
    display:flex;
    justify-content: space-around;
  }

.line-sidebyside-cap{
  display:flex;
  justify-content: space-around;
  margin-top:-55px;
  margin-left: 12px;
}

.value-content-p{
  max-width:160px;
}
.value-person{
  display: flex;
  justify-content: space-around;
}
.value-content{
  max-width: 119px;
  display:block;
  margin-top: 6px;
}
.value-scale{
  display: flex;
  justify-content: space-around;
}
.caption-center{
  text-align:center;
}
.value{
  background-color:#C8DAA6;
  display: block;
  border-radius:25px;
  padding: 15px 15px 55px;
  margin: 24px auto;
}
.value-cap{
  margin-top: -60px;
}

.notan {
  display: flex;
  align-items: center;
  justify-content:center;
  background-color:#FFF48F;
  padding: 15px 0 55px;
  border-radius:25px;
  margin:42px 10px 6px;
}

.notan-image {
  display: block;
  justify-content:space-around;
  width: 210px;
  height: 279px;
  margin-right:20px;
}

.notan-image-small {
  display: block;
  justify-content:space-around;
  width: 90px;
  height: 90px;
}

.notan .notan-image-small:not(:first-child) {
  margin-top: 10px; /* Adjust as needed for spacing between the small images */
}

.notan-cap{
  margin-top: -55px;
}
.video{
  height: 258px;
  width: 343px;
  display:block;
  justify-content: center;
  background-color: #C8DAA6;
  padding: 10px 10px 55px;
  border-radius: 25px;
  margin: 48px auto 6px;
}

.video-cap{
  margin-top: -55px;
}

.post-video{
  margin-top:54px;
}

.image-title{
  text-align: center;
  margin-bottom: -60px;
  margin-top: 46px;
}

.polygraph{
  display: flex;
  justify-content:center;
  background-color:#FFF48F;
  border-radius: 25px;
  padding:15px 5px 55px;
  margin: auto;
  max-width: 360px;
}

.poly-content-1{
max-width: 178px;
margin-right:15px;
}

.poly-content-2{
  max-width: 117px;
  max-height:185PX;
  margin-top:18px;
  margin-left: 15px;
}
.poly-cap{
  margin: -40px auto 15px;
}

.color-cap{
  margin: 114px auto -80px;
}

.color-bottom-cap{
  margin: 15px;
}
.color{
  background-color:#C8DAA6;
  display: block;
  border-radius:25px;
  padding: 55px 15px 55px;
  margin: 24px auto;
}

.color-scale{
  display:flex;
  justify-content: space-around;
}
/* ... */

